buildscript {
    repositories {
        maven { url = 'https://files.minecraftforge.net/maven' }
        maven { url='https://dist.creeper.host/Sponge/maven' }
        maven { url = "https://plugins.gradle.org/m2/"}
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.2'
    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'
apply plugin: "com.github.johnrengelman.shadow"

version = modVersion
group = modGroup
archivesBaseName = modBaseName

compileJava.options.encoding = 'UTF-8'

sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'

minecraft {

    mappings channel: 'stable', version: '60-1.15'

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            property 'forge.logging.console.level', 'debug'

            mods {
                template {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            property 'forge.logging.console.level', 'debug'

            mods {
                template {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            property 'forge.logging.console.level', 'debug'

            args '--mod', 'template', '--all', '--output', file('src/generated/resources/')

            mods {
                template {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    maven {
        url = 'https://dist.creeper.host/Sponge/maven'
    }
}

jar {
    manifest {
        attributes([
                "Specification-Title": "DeadBushUnpowered",
                "Specification-Vendor": "ModcraftMC",
                "Specification-Version": "1",
                "Implementation-Title": project.name,
                "Implementation-Version": version,
                "Implementation-Vendor" :"DeadBushUnpowered",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConnector": "fr.modcraftmc.pluginloader.mixins.MixinConnector"
        ])
    }
}

mixin {
    add sourceSets.main, "mixins.deadbushunpowered.refmap.json"
}

configurations {
    shade
    compile.extendsFrom shade
}



dependencies {

    minecraft 'net.minecraftforge:forge:1.15.2-31.2.0'
    compile 'org.spongepowered:mixin:0.8.1-SNAPSHOT'

    shade group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
    shade 'org.spongepowered:mixin:0.8.1-SNAPSHOT'

}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

shadowJar {
    configurations = [ project.configurations.shade ]
    classifier = 'shade'

    dependencies {
        exclude(dependency('com.google.code.gson:gson:.*'))
    }
}

/**
jar {
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
 **/

jar.finalizedBy shadowJar


reobf {
    shadowJar {}
}
